# python-rag-api

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: b3f391dd8fca_init_migration.py  d8685d234bbe_add_files.py
src/pdf_analyzer/: app_context.py  dependencies.py  main.py
src/pdf_analyzer/models/: __init__.py  chat.py  file.py  message.py
src/pdf_analyzer/repositories/: __init__.py  chat.py  file.py  files.py  message.py
src/pdf_analyzer/routes/: chats.py  files.py
src/pdf_analyzer/schemas/: __init__.py  chat.py  file.py  message.py
src/pdf_analyzer/services/: __init__.py  ai.py  chat.py  document.py
